src/test/ui/mismatched_types/issue-35030.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-35030.rs:9:9
   |
LL |         Some(true)
   |         ^^^^^----^
   |              |
   |              expected `bool`, found `bool`
   |
help: provide an argument of the correct type
   |
LL |         ({bool})
   |         ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
